fix: align openSource cards

--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ header > div {
 
 #npm-config img {
     width: 50px;
+    height: 50px;
 }
 
 #npm-config .btn-group {
